# catboost-cxx

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  amalgamate.py
.github/workflows/: cmake.yml
include/: catboost.hpp  cb.h
perftest/: CMakeLists.txt  build_catboost.sh  codrna.cbm  codrna.cpp  codrna.json  codrna_test.tsv  creditgermany.cbm  creditgermany.cpp  creditgermany.json  creditgermany_test.tsv  dll.hpp  main.cpp  perf.txt  perf_test.hpp
perftest/train_models/: train_models.py
src/: CMakeLists.txt  catboost.cpp  cb.cpp  vec4.hpp
unittest/: CMakeLists.txt  catboost_test.cpp
unittest/testdata/: and-model.json  and.json  gen_catboost_tests.py  or-model.json  or.json  regression-model.json  regression.json  xor-model.json  xor.json
